# StartupMillenium

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md  config.json
.github/workflows/: BuildAndRelease.yml  Release.yml
OpenGarrysMod1000Times/: .gitignore  OpenGarrysMod1000Times.sln  README.md  Startup Millenium.sln
OpenGarrysMod1000Times/OpenGarrysMod1000Times/: Filepaths.cs  Form1.Designer.cs  Form1.cs  Form1.resx  OpenGarrysMod1000Times.csproj  Program.cs  SM.Designer.cs  SM.cs  SM.resx  Startup Millenium.csproj  button.cs
OpenGarrysMod1000Times/OpenGarrysMod1000Times/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
OpenGarrysMod1000Times/Startup-Millenium/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Startup-Millenium.csproj
source/: config.cpp  config.hpp  main.cpp  process.cpp  process.hpp
src/: config.rs  main.rs  process.rs
